<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/background_dbg"
    android:padding="10dp">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"
        android:background="@drawable/rounded_edit_text"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phoneText"
        app:layout_constraintStart_toStartOf="@+id/phoneText"
        app:layout_constraintTop_toBottomOf="@+id/phoneText"
        android:elevation="10dp"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>