<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dbg"
    tools:context=".HomeScreenActivity"
    android:padding="10dp">

    <Button
        android:id="@+id/editorialButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/editorial_vector"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="@+id/contentsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contentsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/contentsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/content_vector"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <Button
        android:id="@+id/publisherButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/publisher_vector"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="@+id/authorsButton"
        app:layout_constraintEnd_toEndOf="@+id/editorialButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editorialButton"
        app:layout_constraintTop_toTopOf="@+id/authorsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/authorsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/author_vector"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/contentsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contentsButton"
        app:layout_constraintTop_toBottomOf="@+id/contentsButton"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/fullBookButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/full_book"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/publisherButton"
        app:layout_constraintStart_toStartOf="@+id/authorsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/contents"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/authorsButton"
        app:layout_constraintEnd_toEndOf="@+id/contentsButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/contentsButton"
        app:layout_constraintTop_toBottomOf="@+id/contentsButton"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/editorial"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/publisherButton"
        app:layout_constraintEnd_toEndOf="@+id/editorialButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editorialButton"
        app:layout_constraintTop_toBottomOf="@+id/editorialButton"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/publisher"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/publisherButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/publisherButton"
        app:layout_constraintTop_toBottomOf="@+id/publisherButton"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/browse_by_authors"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/authorsButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/authorsButton"
        app:layout_constraintTop_toBottomOf="@+id/authorsButton"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#00FFFFFF"
        android:text="@string/full_book"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fullBookButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fullBookButton"
        app:layout_constraintTop_toBottomOf="@+id/fullBookButton"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>