<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dbg"
    android:fillViewport="true"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/authorPhoto"
            android:layout_width="356dp"
            android:layout_height="356dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorName"
            app:layout_constraintEnd_toEndOf="@+id/authorName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorName"
            app:layout_constraintTop_toBottomOf="@+id/authorPhoto"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorName"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/authorPhoto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorPhoto"
            app:layout_constraintTop_toBottomOf="@+id/authorPhoto" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/birthplace"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorBirth"
            app:layout_constraintEnd_toEndOf="@+id/authorBirth"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorBirth"
            app:layout_constraintTop_toBottomOf="@+id/authorName"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorBirth"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/authorName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorName"
            app:layout_constraintTop_toBottomOf="@+id/authorName" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/school"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorSchool"
            app:layout_constraintEnd_toEndOf="@+id/authorSchool"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorSchool"
            app:layout_constraintTop_toBottomOf="@+id/authorBirth"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorSchool"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/authorBirth"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/authorBirth"
            app:layout_constraintTop_toBottomOf="@+id/authorBirth" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/college"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorCollege"
            app:layout_constraintEnd_toEndOf="@+id/authorCollege"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorCollege"
            app:layout_constraintTop_toBottomOf="@+id/authorSchool"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorCollege"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/authorSchool"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/authorSchool"
            app:layout_constraintTop_toBottomOf="@+id/authorSchool" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/hobbies"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorHobbies"
            app:layout_constraintEnd_toEndOf="@+id/authorHobbies"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorHobbies"
            app:layout_constraintTop_toBottomOf="@+id/authorCollege"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorHobbies"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/authorCollege"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/authorCollege"
            app:layout_constraintTop_toBottomOf="@+id/authorCollege" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:text="@string/bloodgroup"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/authorBlood"
            app:layout_constraintEnd_toEndOf="@+id/authorBlood"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/authorBlood"
            app:layout_constraintTop_toBottomOf="@+id/authorHobbies"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/authorBlood"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:padding="5dp"
            android:text="TextView"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="@+id/authorHobbies"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/authorHobbies"
            app:layout_constraintTop_toBottomOf="@+id/authorHobbies" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorBlood"
            app:layout_constraintEnd_toStartOf="@+id/authorBlood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:srcCompat="@drawable/blood_vector"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorHobbies"
            app:layout_constraintEnd_toStartOf="@+id/authorHobbies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView11"
            app:srcCompat="@drawable/hobbies_vector" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorCollege"
            app:layout_constraintEnd_toStartOf="@+id/authorCollege"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:srcCompat="@drawable/college_vector" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorSchool"
            app:layout_constraintEnd_toStartOf="@+id/authorSchool"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9"
            app:srcCompat="@drawable/school_vector" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorBirth"
            app:layout_constraintEnd_toStartOf="@+id/authorBirth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:srcCompat="@drawable/birthplace_vector" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/authorName"
            app:layout_constraintEnd_toStartOf="@+id/authorName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:srcCompat="@drawable/identity_vector" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>